chore: replace runtime version retrieval with compile-time constant in AboutMenuItem
- Removed System.Reflection using statement from AboutMenuItem.cs
- Replaced Assembly.GetExecutingAssembly() runtime version retrieval with compile-time SOLUTION_VERSION constant
- Added DefineConstants in SmartHopper.Menu.csproj to inject SolutionVersion as SOLUTION_VERSION preprocessor definition

--- a/src/SmartHopper.Menu/SmartHopper.Menu.csproj
+++ b/src/SmartHopper.Menu/SmartHopper.Menu.csproj
@@ -30,6 +30,7 @@
   <PropertyGroup>
     <Title>SmartHopper Menu</Title>
     <Description>Menu management for SmartHopper</Description>
+    <DefineConstants>$(DefineConstants);SOLUTION_VERSION="$(SolutionVersion)"</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup>
