--- a/yak-package/manifest.yml
+++ b/yak-package/manifest.yml
@@ -7,7 +7,7 @@ description: >
 
   ----
 
-  Please report any issues at <https://github.com/architects-toolkit/SmartHopper/issues>
+  NOTE: This is an alpha release and you might find bugs :/ Please, report them at <https://github.com/architects-toolkit/SmartHopper/issues>
 
   ----
 
