chore: fix grep syntax in pr-manifest-validation.yml by adding explicit -e flag for pattern matching

--- a/.github/workflows/pr-manifest-validation.yml
+++ b/.github/workflows/pr-manifest-validation.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           # Extract the note/description section between the description block markers
           sed -n '/----/,/----/p' yak-package/manifest.yml | \
-            grep -v '----' | \
+            grep -v -e '----' | \
             grep -v '^$' | \
             sed 's/^  //' | \
             tr '\n' ' ' | \
