--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>1.3.0-alpha</SolutionVersion>
+    <SolutionVersion>1.3.1-dev.260208</SolutionVersion>
   </PropertyGroup>
 </Project>
