chore: bump version to 1.4.0-dev.260215 and update issue template placeholders
- Updated SolutionVersion from 1.3.0-alpha to 1.4.0-dev.260215
- Updated bug report template placeholders to reflect current versions (RH8.28, SmartHopper 1.4.0-alpha)
- Added explicit import of Solution.props in Directory.Build.props
- Added conditional check for SolutionVersion property to prevent empty version values

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project>
+  <Import Project="$(MSBuildThisFileDirectory)Solution.props" Condition="Exists('$(MSBuildThisFileDirectory)Solution.props')" />
   <!-- Metadata for .NET project -->
   <PropertyGroup>
-    <Version>$(SolutionVersion)</Version>
+    <Version Condition="'$(SolutionVersion)' != ''">$(SolutionVersion)</Version>
     <Company>Architect's Toolkit</Company>
     <Authors>Marc Roca Musach + SmartHopper Community</Authors>
     <Copyright>Copyright (C) 2024-2026 Marc Roca Musach</Copyright>
