feat(security): add SHA-256 hash verification system for AI provider DLLs
- Added automated hash generation in release workflow (release-4-build.yml)
  - Calculate SHA-256 hashes for all provider DLLs across platforms (net7.0-windows, net7.0)
  - Generate versioned JSON manifest with hash values, metadata, and build info
  - Upload hash manifest as release asset
  - Publish hash manifest to main branch under .github/pages/hashes/
  - Create index.html for hash repository with version listing

--- a/.github/workflows/release-4-build.yml
+++ b/.github/workflows/release-4-build.yml
@@ -297,6 +297,64 @@ jobs:
         $zipPathsJson = ConvertTo-Json -InputObject $zipPaths -Compress
         echo "zip_paths=$zipPathsJson" >> $env:GITHUB_OUTPUT
 
+    - name: Calculate Provider SHA-256 Hashes
+      id: calculate_hashes
+      shell: pwsh
+      run: |
+        $version = "${{ steps.determine_version.outputs.VERSION }}"
+        # Version format: 1.2.3 or 1.2.3-alpha (no "v" prefix)
+        $platforms = @("net7.0-windows", "net7.0")
+        $hashManifest = @{
+          version = $version
+          generated = (Get-Date).ToUniversalTime().ToString("yyyy-MM-ddTHH:mm:ssZ")
+          algorithm = "SHA-256"
+          providers = @{}
+          metadata = @{
+            buildNumber = "${{ github.run_number }}"
+            commitSha = "${{ github.sha }}"
+            repository = "${{ github.repository }}"
+          }
+        }
+        
+        foreach ($platform in $platforms) {
+          $platformPath = Join-Path "artifacts" $platform
+          
+          if (Test-Path $platformPath) {
+            Write-Host "Calculating hashes for platform: $platform"
+            
+            # Find all provider DLLs
+            $providerDlls = Get-ChildItem -Path $platformPath -Filter "SmartHopper.Providers.*.dll" -File
+            
+            foreach ($dll in $providerDlls) {
+              # Calculate SHA-256 hash
+              $hash = Get-FileHash -Path $dll.FullName -Algorithm SHA256
+              $hashValue = $hash.Hash.ToLower()
+              
+              # Store in manifest with platform suffix for cross-platform tracking
+              $key = "$($dll.Name)-$platform"
+              $hashManifest.providers[$key] = $hashValue
+              
+              Write-Host "  $($dll.Name): $hashValue"
+            }
+          }
+        }
+        
+        # Convert to JSON and save
+        $hashJson = ConvertTo-Json -InputObject $hashManifest -Depth 10
+        $hashFile = "provider-hashes-$version.json"
+        Set-Content -Path $hashFile -Value $hashJson -Encoding UTF8
+        
+        Write-Host "Hash manifest saved to: $hashFile"
+        Get-Content $hashFile | Write-Host
+        
+        echo "HASH_FILE=$hashFile" >> $env:GITHUB_OUTPUT
+
+    - name: Upload Hash Manifest to Build Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: provider-hashes
+        path: ${{ steps.calculate_hashes.outputs.HASH_FILE }}
+
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v4
       with:
@@ -352,3 +410,101 @@ jobs:
         asset_path: SmartHopper-${{ steps.determine_version.outputs.VERSION }}-Rhino8-Mac-not-tested.zip
         asset_name: SmartHopper-${{ steps.determine_version.outputs.VERSION }}-Rhino8-Mac-not-tested.zip
         asset_content_type: application/zip
+        
+    - name: Upload Provider Hash Manifest to Release
+      if: steps.determine_version.outputs.IS_RELEASE == 'true'
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ github.event_name == 'release' && github.event.release.upload_url || steps.get_release_url.outputs.UPLOAD_URL }}
+        asset_path: ${{ steps.calculate_hashes.outputs.HASH_FILE }}
+        asset_name: ${{ steps.calculate_hashes.outputs.HASH_FILE }}
+        asset_content_type: application/json
+
+    - name: Publish Hash Manifest to Main Branch
+      if: steps.determine_version.outputs.IS_RELEASE == 'true'
+      shell: pwsh
+      run: |
+        $version = "${{ steps.determine_version.outputs.VERSION }}"
+        $hashFile = "${{ steps.calculate_hashes.outputs.HASH_FILE }}"
+        
+        # Configure git
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        
+        # Ensure we're on main branch
+        git checkout main
+        git pull origin main
+        
+        # Create .github/pages directory structure
+        New-Item -ItemType Directory -Force -Path ".github/pages/hashes" | Out-Null
+        
+        # Copy hash file with version-specific name (always override)
+        Copy-Item $hashFile -Destination ".github/pages/hashes/$version.json" -Force
+        Write-Host "Copied hash manifest to .github/pages/hashes/$version.json"
+        
+        # Determine if this is a stable version (no alpha/beta/rc/dev)
+        $isStable = $version -notmatch '-(alpha|beta|rc|dev)'
+        
+        if ($isStable) {
+          # Update latest.json only for stable versions
+          Copy-Item $hashFile -Destination ".github/pages/hashes/latest.json" -Force
+          Write-Host "Updated latest.json (stable version)"
+        } else {
+          Write-Host "Skipping latest.json update (prerelease version)"
+        }
+        
+        # Create or update index page
+        $indexContent = @"
+        <!DOCTYPE html>
+        <html>
+        <head>
+          <title>SmartHopper Provider Hash Repository</title>
+          <style>
+            body { font-family: Arial, sans-serif; max-width: 800px; margin: 50px auto; padding: 20px; }
+            h1 { color: #333; }
+            .version { margin: 10px 0; }
+            .stable { color: green; font-weight: bold; }
+            .prerelease { color: orange; }
+          </style>
+        </head>
+        <body>
+          <h1>SmartHopper Provider Hash Repository</h1>
+          <p>This repository contains SHA-256 hash manifests for SmartHopper provider DLLs.</p>
+          <h2>Available Versions:</h2>
+          <ul id="versions"></ul>
+          <script>
+            fetch('https://api.github.com/repos/${{ github.repository }}/contents/.github/pages/hashes')
+              .then(r => r.json())
+              .then(files => {
+                const ul = document.getElementById('versions');
+                files.filter(f => f.name.endsWith('.json'))
+                  .sort((a, b) => b.name.localeCompare(a.name))
+                  .forEach(f => {
+                    const li = document.createElement('li');
+                    const a = document.createElement('a');
+                    a.href = 'https://raw.githubusercontent.com/${{ github.repository }}/main/.github/pages/hashes/' + f.name;
+                    a.textContent = f.name;
+                    const isStable = !f.name.match(/(alpha|beta|rc)/);
+                    li.className = isStable ? 'stable' : 'prerelease';
+                    li.appendChild(a);
+                    ul.appendChild(li);
+                  });
+              });
+          </script>
+        </body>
+        </html>
+        "@
+        Set-Content -Path ".github/pages/index.html" -Value $indexContent -Encoding UTF8
+        
+        # Commit and push to main
+        git add .github/pages/
+        git commit -m "Add provider hashes for $version" 2>$null
+        if ($LASTEXITCODE -eq 0) {
+          git push origin main
+          Write-Host "Hash manifest published to main branch"
+          Write-Host "Available at: https://raw.githubusercontent.com/${{ github.repository }}/main/.github/pages/hashes/$version.json"
+        } else {
+          Write-Host "No changes to commit (hash already exists, overridden)"
+        }
