--- a/.github/workflows/chore-version-badge.yml
+++ b/.github/workflows/chore-version-badge.yml
@@ -15,9 +15,10 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - release/*
       - main
       - dev
+      - 'hotfix/**'
+      - 'release/**'
 
 permissions:
   contents: write
