--- a/.github/workflows/pr-delete-auto-branches.yml
+++ b/.github/workflows/pr-delete-auto-branches.yml
@@ -26,14 +26,15 @@ jobs:
     name: Delete auto branches
     if: |
       startsWith(github.event.pull_request.head.ref, 'update-branch/') ||
-      startsWith(github.event.pull_request.head.ref, 'chore/update-dev-version-date-') ||
-      startsWith(github.event.pull_request.head.ref, 'docs/update-version-badge-') ||
+      startsWith(github.event.pull_request.head.ref, 'chore/') ||
+      startsWith(github.event.pull_request.head.ref, 'docs/') ||
       startsWith(github.event.pull_request.head.ref, 'ci/') ||
       startsWith(github.event.pull_request.head.ref, 'release/') ||
       startsWith(github.event.pull_request.head.ref, 'feature/') ||
       startsWith(github.event.pull_request.head.ref, 'feat/') ||
       startsWith(github.event.pull_request.head.ref, 'hotfix/') ||
       startsWith(github.event.pull_request.head.ref, 'bugfix/') ||
+      startsWith(github.event.pull_request.head.ref, 'bug/') ||
       startsWith(github.event.pull_request.head.ref, 'fix/')
     runs-on: ubuntu-latest
     steps:
