--- a/.github/workflows/pr-dependency-validation.yml
+++ b/.github/workflows/pr-dependency-validation.yml
@@ -15,11 +15,17 @@ on:
   pull_request:
     branches:
       - main
+      - dev
+      - 'hotfix/**'
+      - 'release/**'
     paths:
       - 'src/**/*.csproj'
   push:
     branches:
       - main
+      - dev
+      - 'hotfix/**'
+      - 'release/**'
     paths:
       - 'src/**/*.csproj'
 
