--- a/.github/actions/compile-solution/action.yml
+++ b/.github/actions/compile-solution/action.yml
@@ -58,10 +58,38 @@ runs:
     - name: Collect Artifacts
       shell: pwsh
       run: |
+        # Validate and sanitize inputs
         $outputDir = "${{ inputs.output-directory }}"
         $version = "${{ inputs.version }}"
         $configuration = "${{ inputs.configuration }}"
         $platformsJson = '${{ inputs.platforms }}'
+        
+        # Validate version format
+        if ([string]::IsNullOrWhiteSpace($version)) {
+          Write-Host "##[error] Version cannot be empty"
+          exit 1
+        }
+        if ($version -notmatch '^[0-9]+\.[0-9]+(\.[0-9]+)?(-[a-zA-Z0-9\.\-]+)?$') {
+          Write-Host "##[error] Invalid version format: '$version'"
+          exit 1
+        }
+        
+        # Validate configuration
+        if ($configuration -notin @('Release', 'Debug')) {
+          Write-Host "##[error] Invalid configuration: '$configuration'. Must be 'Release' or 'Debug'"
+          exit 1
+        }
+        
+        # Validate output directory to prevent path traversal
+        if ([string]::IsNullOrWhiteSpace($outputDir)) {
+          Write-Host "##[error] Output directory cannot be empty"
+          exit 1
+        }
+        $outputDir = $outputDir -replace '\.\.[\\/]', ''
+        if ($outputDir -match '\.\.' -or $outputDir -match '^[\\/]') {
+          Write-Host "##[error] Invalid output directory (potential path traversal): '$outputDir'"
+          exit 1
+        }
         
         # Parse and validate platforms input
         try {
@@ -74,6 +102,18 @@ runs:
         if ($null -eq $platforms -or $platforms.Count -eq 0) {
           Write-Host "##[error] Platforms array is empty or invalid"
           exit 1
+        }
+        
+        # Validate platform names to prevent path traversal
+        foreach ($platform in $platforms) {
+          if ([string]::IsNullOrWhiteSpace($platform)) {
+            Write-Host "##[error] Platform name cannot be empty or whitespace"
+            exit 1
+          }
+          if ($platform -match '[\\/\.\.:]|^\.|\.\.') {
+            Write-Host "##[error] Invalid platform name (potential path traversal): '$platform'"
+            exit 1
+          }
         }
         
         Write-Host "Collecting artifacts for version: $version"
