refactor(ci): rename test workflows to user workflows and update descriptions
- Renamed test-build-and-hash.yml to user-build-and-hash.yml
- Renamed test-publish-pages.yml to user-publish-pages.yml
- Updated workflow names from "🧪 Test" to "👤 User" prefix
- Simplified workflow descriptions to remove "test" terminology

--- a/.github/workflows/user-build-and-hash.yml
+++ b/.github/workflows/user-build-and-hash.yml
@@ -1,6 +1,6 @@
-name: 🧪 Test Build and Hash Generation
+name: 👤 User Build and Hash Generation
 
-# Description: Manual workflow to test the build process and hash generation
+# Description: Manual workflow to build and hash provider DLLs
 # without going through the full release flow. Useful for validating changes
 # to build scripts or hash calculation logic.
 
