refactor(security): improve platform name validation regex to better detect path traversal patterns
- Enhanced regex to explicitly check for leading/trailing dots and embedded dot sequences
- Changed from '[\\/\.\.:]|^\.|\..' to '[\\/]|^\.\.|^\.|.*\.\..*|.*:$' for more precise validation
- Prevents path traversal attacks while maintaining clear pattern matching logic

--- a/.github/actions/compile-solution/action.yml
+++ b/.github/actions/compile-solution/action.yml
@@ -110,7 +110,7 @@ runs:
             Write-Host "##[error] Platform name cannot be empty or whitespace"
             exit 1
           }
-          if ($platform -match '[\\/\.\.:]|^\.|\.\.') {
+          if ($platform -match '[\\/]|^\.\.|^\.|.*\.\..*|.*:$') {
             Write-Host "##[error] Invalid platform name (potential path traversal): '$platform'"
             exit 1
           }
