--- a/.github/actions/calculate-provider-hashes/action.yml
+++ b/.github/actions/calculate-provider-hashes/action.yml
@@ -58,7 +58,7 @@ runs:
             Write-Host "##[error] Platform name cannot be empty or whitespace"
             exit 1
           }
-          if ($platform -match '[\\/\.\.:]|^\.|\.\.') {
+          if ($platform -notmatch '^[a-zA-Z0-9\.-]+$') {
             Write-Host "##[error] Invalid platform name (potential path traversal): '$platform'"
             exit 1
           }
