refactor(actions): standardize output names to uppercase in calculate-provider-hashes action
- Changed output names from kebab-case to SCREAMING_SNAKE_CASE (hash-file → HASH_FILE, hash-count → HASH_COUNT)
- Maintains consistency with internal step output variable naming convention

--- a/.github/actions/calculate-provider-hashes/action.yml
+++ b/.github/actions/calculate-provider-hashes/action.yml
@@ -24,10 +24,10 @@ inputs:
     required: false
     default: ''
 outputs:
-  hash-file:
+  HASH_FILE:
     description: 'Path to the generated hash manifest JSON file'
     value: ${{ steps.calculate.outputs.HASH_FILE }}
-  hash-count:
+  HASH_COUNT:
     description: 'Number of provider DLLs hashed'
     value: ${{ steps.calculate.outputs.HASH_COUNT }}
 
